# MLP_for_CPP_Deployment

./: CMakeLists.txt  README.md
include/: MLPModel.h
models/classfication/: config.yaml  evaluation_metrics.txt  scaler_X.pkl  scaler_X.txt  training_history.pkl
models/classfication/best_model/: model.onnx  model_full.pth  model_libtorch.pt  model_weights.pth
models/classfication/last_model/: model.onnx  model_full.pth  model_libtorch.pt  model_weights.pth
models/model_1/: evaluation_metrics.txt  scaler_X.txt  training_history.pkl
models/model_1/last_model/: model_libtorch.pt  model_weights.pth
models/regression/: config.yaml  scaler_X.pkl  scaler_y.pkl  scaler_y.txt
models/regression/best_model/: model.onnx  model_full.pth  model_libtorch.pt  model_weights.pth
models/regression/last_model/: model.onnx  model_full.pth
src/: MLPModel.cpp  main.cpp
